--- a/Notas.tex
+++ b/Notas.tex
@@ -122,7 +122,7 @@
 			\textbf{Introducción al álgebra homológica}\\
 			\vspace*{0.3in}
 			\vspace*{0.15in}
-			Lorena M. Noh Canul\\
+			M. Noh Canul\\
 			Alejandro Vázquez Aceves\\
 			Jorge Alfredo Álvarez Contreras\\
 			\vspace*{0.15in}
