--- a/Notas.tex
+++ b/Notas.tex
@@ -124,7 +124,7 @@
 			\vspace*{0.15in}
 			M. Noh Canul\\
 			Alejandro Vázquez Aceves\\
-			Jorge Alfredo Álvarez Contreras\\
+			Alfredo Álvarez Contreras\\
 			\vspace*{0.15in}
 			\vspace*{0.15in}
 		\end{Large}
